; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_acpi.c_basl_start.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_acpi.c_basl_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.basl_fio = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.basl_fio*, %struct.basl_fio*)* @basl_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @basl_start(%struct.basl_fio* %0, %struct.basl_fio* %1) #0 {
  %3 = alloca %struct.basl_fio*, align 8
  %4 = alloca %struct.basl_fio*, align 8
  %5 = alloca i32, align 4
  store %struct.basl_fio* %0, %struct.basl_fio** %3, align 8
  store %struct.basl_fio* %1, %struct.basl_fio** %4, align 8
  %6 = load %struct.basl_fio*, %struct.basl_fio** %3, align 8
  %7 = call i32 @basl_open(%struct.basl_fio* %6, i32 0)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %19, label %10

10:                                               ; preds = %2
  %11 = load %struct.basl_fio*, %struct.basl_fio** %4, align 8
  %12 = call i32 @basl_open(%struct.basl_fio* %11, i32 1)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load %struct.basl_fio*, %struct.basl_fio** %3, align 8
  %17 = call i32 @basl_close(%struct.basl_fio* %16)
  br label %18

18:                                               ; preds = %15, %10
  br label %19

19:                                               ; preds = %18, %2
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @basl_open(%struct.basl_fio*, i32) #1

declare dso_local i32 @basl_close(%struct.basl_fio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
